# SYSLOG

./: CMakeLists.txt  HelloServer  Makefile  config.cc  config.h  config.yaml  log.cc  log.h  singleton.h  util.cc  util.h
tests/: main  test  test.cc  test.h  test_config.cc  test_log.cc
